# GurobiML

./: .gitignore  CMakeLists.txt  GurobiML  GurobiML.m  GurobiML.nb  GurobiMLTests.nb  LICENSE  README  README.md  build_gurobi_mathlink  gurobi_mathlink.c  gurobi_mathlink.tm  index.html  params.json
CMake/Mathematica/: LICENSE
GurobiML/: GurobiML.m
GurobiML/Kernel/: init.m
Kernel/: init.m
win/: README.txt
win/GurobiML/: GurobiML.m
